--- a/Uwl.Admin/package.json
+++ b/Uwl.Admin/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "echarts": "^4.2.1",
     "iview": "^3.4.0",
+    "linq": "^3.2.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0"
