--- a/Uwl.Admin/package.json
+++ b/Uwl.Admin/package.json
@@ -15,6 +15,7 @@
     "echarts": "^4.2.1",
     "iview": "^3.4.0",
     "linq": "^3.2.1",
+    "oidc-client": "^1.10.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.0"
